src/snapshots/ruff__linter__tests__f601.snap
---
source: src/linter.rs
expression: checks
---
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 3
    column: 6
  fix: ~
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 9
    column: 5
  fix: ~
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 11
    column: 7
  fix: ~

