src/snapshots/ruff__linter__tests__f602.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 5
    column: 5
  fix: ~

