src/snapshots/ruff__linter__tests__f622.snap
---
source: src/linter.rs
expression: checks
---
- kind: TwoStarredExpressions
  location:
    row: 1
    column: 1
  fix: ~

