src/snapshots/ruff__linter__tests__f631.snap
---
source: src/linter.rs
expression: checks
---
- kind: AssertTuple
  location:
    row: 1
    column: 1
  fix: ~
- kind: AssertTuple
  location:
    row: 2
    column: 1
  fix: ~

