src/snapshots/ruff__linter__tests__f633.snap
---
source: src/linter.rs
expression: checks
---
- kind: InvalidPrintSyntax
  location:
    row: 4
    column: 1
  fix: ~

