src/snapshots/ruff__linter__tests__f702.snap
---
source: src/linter.rs
expression: checks
---
- kind: ContinueOutsideLoop
  location:
    row: 4
    column: 5
  fix: ~
- kind: ContinueOutsideLoop
  location:
    row: 16
    column: 5
  fix: ~
- kind: ContinueOutsideLoop
  location:
    row: 20
    column: 5
  fix: ~
- kind: ContinueOutsideLoop
  location:
    row: 23
    column: 1
  fix: ~

