src/snapshots/ruff__linter__tests__f706.snap
---
source: src/linter.rs
expression: checks
---
- kind: ReturnOutsideFunction
  location:
    row: 6
    column: 5
  fix: ~
- kind: ReturnOutsideFunction
  location:
    row: 9
    column: 1
  fix: ~

